[package]
name = "moonalloy"
version = "0.1.1"
authors = ["Tomas <tomas.hagenau@protonmail.ch>"]
edition = "2018"
description = "The oxidized scientific computing library for the 21st century"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://git.hacktheoxidation.xyz/HackTheOxidation/moonalloy"
categories = ["mathematics", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moonalloy"
crate-type = ["cdylib", "lib"]

[profile.bench]
debug = true
